# -

./: .gitignore  README.md  pyproject.toml
agents/: 00_selector_agent.txt  _example_custom_reviewer.txt  _example_persona_reviewer.txt  audience_reviewer.txt  fact_checker.txt  format_reviewer.txt  interview_ethics_reviewer.txt  persona_hostile_critic.txt  persona_indifferent_scroller.txt  persona_skeptical_reader.txt  privacy_reviewer.txt  risk_reviewer.txt  test.txt
cases/: README.txt  case_privacy_photo.txt  case_title_conflict.txt
docs/: 00_实施总览.md  01_项目边界与最终能力.md  02_根目录txt存储结构.md  03_数据结构与Schema.md  04_Agent配置文件规范.md  05_SelectorAgent自动选Agent机制.md  06_知识库txt加载与检索.md  07_审稿引擎主流程.md  08_LLM调用与结构化输出校验.md  09_并行执行与失败降级.md  10_仲裁去重评分与报告分层.md  11_CLI与可选WebAPI.md  12_测试样例与验收标准.md  13_分阶段开发任务清单.md  14_可复制模板.md  15_配置项与环境变量.md
examples/: README.txt  good_interview_example.txt  good_news_example.txt
input/: article.md
risky_phrases/: README.txt  bureaucratic_phrases.txt  group_conflict_phrases.txt  title_risk.txt
rules/: README.txt  school_publicity_rules.txt  student_media_review_rules.txt
src/review_tool/: __init__.py  cli.py  config.py  engine.py  schemas.py  web_app.py
src/review_tool/agents/: prompt_builder.py  (+3 more)
style_guides/: README.txt  activity_post_style.txt  interview_style.txt  news_style.txt
tests/: test_agent_loader.py  test_article_loading.py  test_docx_exporter.py  test_engine_output_paths.py  test_frontmatter.py  test_json_repair.py  test_persona_agents.py  test_retriever.py  test_schemas.py  test_scoring.py  test_selector_routing.py
(+27 files in other folders)
